# cadence

./: README.md
_bmad-output/brainstorming/: brainstorming-session-2026-02-24.md
_bmad-output/implementation-artifacts/: 1-1-set-up-full-tech-stack-on-tauri-scaffold.md  1-2-initialize-local-database-with-platform-storage.md  1-3-multi-window-architecture-with-global-hotkey.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-cadence-2026-02-24.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  cursor.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/: .prettierignore  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
app/src/: App.test.tsx  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/migrations/: 001_initial_schema.sql
app/src-tauri/src/: error.rs  lib.rs
app/src-tauri/src/db/: mod.rs  pool.rs
app/src-tauri/tests/: db_init_test.rs
app/src/lib/: tauriCommands.test.ts  tauriCommands.ts
docs/: MCP.md  STORAGE-FORMAT.md
